Move Extension methods to retrieve system references from autoproperties.fody

--- a/FodyTools.Tests/FodyTools.Tests.csproj
+++ b/FodyTools.Tests/FodyTools.Tests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="*" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DummyAssembly\DummyAssembly.csproj" />
     <ProjectReference Include="..\FodyTools\FodyTools.csproj" />
   </ItemGroup>
   <ItemGroup>
