--- a/FodyTools/FodyTools.csproj
+++ b/FodyTools/FodyTools.csproj
@@ -6,8 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FodyHelpers" Version="*" />
-    <PackageReference Include="JetBrains.Annotations" Version="*" />
+    <PackageReference Include="FodyHelpers" Version="3.2.2" />
+    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="SonarAnalyzer.CSharp" Version="7.5.0.6605">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
