--- a/DummyAssembly/DummyAssembly.csproj
+++ b/DummyAssembly/DummyAssembly.csproj
@@ -4,4 +4,7 @@
     <TargetFrameworks>netstandard2.0;net46</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="TomsToolbox.Core" Version="1.0.74" />
+  </ItemGroup>
 </Project>
