Move ILMerge to CodeImporter

--- a/FodyTools.Tests/FodyTools.Tests.csproj
+++ b/FodyTools.Tests/FodyTools.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net46</TargetFramework>
+    <TargetFrameworks>net46;netcoreapp2.1</TargetFrameworks>
     <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC};{3AC096D0-A1C2-E12C-1390-A8335801FDAB}</ProjectTypeGuids>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
@@ -17,6 +17,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DummyAssembly\DummyAssembly.csproj" />
+    <ProjectReference Include="..\EmptyAssembly\EmptyAssembly.csproj" />
     <ProjectReference Include="..\FodyTools\FodyTools.csproj" />
   </ItemGroup>
   <ItemGroup>
