--- a/FodyTools.Tests/FodyTools.Tests.csproj
+++ b/FodyTools.Tests/FodyTools.Tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="FodyHelpers" Version="3.2.3" />
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="TomsToolbox.Core" Version="1.0.74" />
+    <PackageReference Include="TomsToolbox.Desktop" Version="1.0.74" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0">
       <PrivateAssets>all</PrivateAssets>
