--- a/PerformanceTest/PerformanceTest.csproj
+++ b/PerformanceTest/PerformanceTest.csproj
@@ -15,7 +15,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FodyHelpers" Version="3.2.3" />
+    <PackageReference Include="FodyHelpers" Version="3.3.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
   </ItemGroup>
   <ItemGroup>
