--- a/DummyAssembly/DummyAssembly.csproj
+++ b/DummyAssembly/DummyAssembly.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <PackageReference Include="TomsToolbox.Core" Version="1.0.75" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ReferencedAssembly\ReferencedAssembly.csproj" />
+  </ItemGroup>
 </Project>
