--- a/FodyTools.Tests/FodyTools.Tests.csproj
+++ b/FodyTools.Tests/FodyTools.Tests.csproj
@@ -6,6 +6,14 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Binaries\*.*" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Binaries\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="FodyHelpers" Version="3.3.3" />
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="TomsToolbox.Core" Version="1.0.75" />
