--- a/FodyTools/FodyTools.csproj
+++ b/FodyTools/FodyTools.csproj
@@ -3,14 +3,11 @@
   <PropertyGroup>
     <TargetFrameworks>net472;netstandard2.0</TargetFrameworks>
     <CodeAnalysisRuleSet>FodyTools.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FodyHelpers" Version="6.0.5" />
-    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.1.0.13383">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="FodyHelpers" Version="6.1.1" />
   </ItemGroup>
 </Project>
