--- a/FodyTools.Tests/FodyTools.Tests.csproj
+++ b/FodyTools.Tests/FodyTools.Tests.csproj
@@ -4,6 +4,7 @@
     <TargetFrameworks>net472;netcoreapp2.1</TargetFrameworks>
     <ProjectTypeGuids>{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC};{3AC096D0-A1C2-E12C-1390-A8335801FDAB}</ProjectTypeGuids>
     <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
     <DebugType>embedded</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
