--- a/FodyTools.Tests/FodyTools.Tests.csproj
+++ b/FodyTools.Tests/FodyTools.Tests.csproj
@@ -20,12 +20,14 @@
   <ItemGroup>
     <PackageReference Include="ApprovalTests" Version="5.0.0" />
     <PackageReference Include="FodyHelpers" Version="6.1.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.0" />
     <PackageReference Include="TomsToolbox.Core" Version="1.0.75" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" PrivateAssets="All" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DummyAssembly\DummyAssembly.csproj" />
+    <ProjectReference Include="..\DummyNullableAssembly\DummyNullableAssembly.csproj" />
     <ProjectReference Include="..\EmptyAssembly\EmptyAssembly.csproj" />
     <ProjectReference Include="..\FodyTools\FodyTools.csproj" />
   </ItemGroup>
