Extend code importer options to allow to even more compact the target.

--- a/FodyTools.Tests/FodyTools.Tests.csproj
+++ b/FodyTools.Tests/FodyTools.Tests.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="FodyHelpers" Version="6.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
     <PackageReference Include="TomsToolbox.Core" Version="1.0.75" />
+    <PackageReference Include="Verify.Xunit" Version="14.0.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" PrivateAssets="All" />
   </ItemGroup>
@@ -31,7 +32,7 @@
     <ProjectReference Include="..\EmptyAssembly\EmptyAssembly.csproj" />
     <ProjectReference Include="..\FodyTools\FodyTools.csproj" />
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='net472'">
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
